fixed issue with list spacing

--- a/components/LegacyPage/Functionality/Functionality.module.scss
+++ b/components/LegacyPage/Functionality/Functionality.module.scss
@@ -79,13 +79,17 @@
 }
 
 .list {
-  margin-left: 1.5rem;
-  gap: 0.70rem;
+  margin-left: 2rem;
+  gap: 0.70rem !important;
 }
 
 .list li::before {
   background: white;
   width: 0.4rem;
   height: 0.4rem;
-  left: -1.25rem;
+  left: -1.25rem !important;
+}
+
+.light li::before {
+  background: $blue--3;
 }
